Fix header and row spacing. Add website project entry.

--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,21 @@
   background-color: #2b3e50;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.App-reactLogo {
+  animation: App-logo-spin infinite 30s linear;
+  height: 40px;
+}
+
+.App-githubLogo {
+  height: 40px;
+}
+
+.App-linkedinLogo {
+  height: 32px;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: black;
   height: 150px;
   padding: 20px;
   color: white;
@@ -30,6 +38,12 @@
 
 .App-intro {
   font-size: large;
+}
+
+.App-footer {
+  background-color: black;
+  color: white;
+  padding-top: 1em;
 }
 
 @keyframes App-logo-spin {
@@ -60,9 +74,18 @@
   display: block;
 }
 
-#headerRow {
+div>.row {
   overflow: auto;
   display: block;
+}
+
+#headerRow {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div>.container {
+  max-width: unset;
 }
 
 .project a {
